Fix lyrics overflow. Change proptypes from calling individual functions to calling it from an instance

--- a/src/components/VotingBoard/VotingBoard.css
+++ b/src/components/VotingBoard/VotingBoard.css
@@ -1,3 +1,3 @@
 .lyrics-segment {
-  white-space: pre;
+  white-space: pre-wrap;
 }
